Typed engine query parameters, one parse path
Engines declare a name and a value type instead of names alone. The
declarations are captured at discovery as plain data, and the parse
layer type checks engine parameter values with core code, so a wrong
type is rejected at the REST layer the same way core parameters are.
Value rules stay with the engine's search context at query time, and
parse never runs engine code. The wire format does not change.

Signed-off-by: Isaac Gonzalez <isaac.gonzalez@intel.com>